--- a/src/sass/sprint-game/style.scss
+++ b/src/sass/sprint-game/style.scss
@@ -1,5 +1,5 @@
 $sprint-border-color: #616161;
-$sprint-star-off: $main-color;
+$sprint-words-color: #1c3d5d;
 $sprint-star-on: #ffd700;
 $sprint-wrong-color: #e7717d;
 $sprint-right-color: #afd274;
@@ -8,7 +8,7 @@ $print-header-second: #9b27b0a4;
 $print-header-third: #e91e62a2;
 
 
-.sprint-game {
+.sprint-game-bgr {
   background-image: url(/src/assets/images/savannah-bg.svg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -20,7 +20,7 @@ $print-header-third: #e91e62a2;
   justify-content: space-between;
   width: 600px;
   height: 70vh;
-  margin: 5% auto;
+  margin: 4rem auto;
 
   text-align: center;
 
@@ -29,15 +29,15 @@ $print-header-third: #e91e62a2;
   box-shadow: 0 3px 5px 0 $sprint-border-color;
 
   transition: .3s ease-out;
-  // background-image: url(../assets/images/savannah-bg.svg);
-  // background: linear-gradient(#184e66, #09877e);
 }
-.sprint-container--true {
-  box-shadow: 0 3px 6px 3px $sprint-right-color;
+.sprint-game-bgr .sprint-container {
+  background-image: url(/src/assets/images/big-moon-cut.png);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;
 }
-.sprint-container--false {
-  box-shadow: 0 3px 6px 5px $sprint-wrong-color;
-}
+
+// header
 .sprint-header {
   position: relative;
 
@@ -46,40 +46,26 @@ $print-header-third: #e91e62a2;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 }
-.sprint-roof1,
-.sprint-roof2,
-.sprint-roof3 {
-  background: center / contain url("/src/assets/images/roof.jpg");
-  box-shadow: 0 2px 5px 0 $sprint-border-color;
-}
 
 .sprint-header-layer {
   width: 100%;
   height: 100%;
 
+  color: $sprint-words-color;
+
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 }
 
-.sprint-roof1 > .sprint-header-layer,
-.sprint-roof2 > .sprint-header-layer,
-.sprint-roof3 > .sprint-header-layer {
-  background-color: $print-header-first;
-}
-
 .sprint-score {
   position: absolute;
-  top: 20px;
-  left: 20px;
+  top: 12%;
+  left: 2%;
 
   font-weight: 300;
-  font-size: 24px;
+  font-size: 4rem;
 }
-.sprint-roof1 .sprint-score,
-.sprint-roof2 .sprint-score,
-.sprint-roof3 .sprint-score {
-  color: #ffffff;
-}
+
 .sprint-marks-line {
   display: flex;
   justify-content: center;
@@ -89,20 +75,64 @@ $print-header-third: #e91e62a2;
   margin: 0 1%;
 
   font-weight: 300;
-  font-size: 24px;
+  font-size: 3rem;
   color: transparent;
 }
 .activated {
   color: $sprint-star-on;
 }
+.sprint-timer {
+  position: absolute;
+  top: 12%;
+  right: 2%;
+
+  font-weight: 300;
+  font-size: 4rem;
+}
+.sprint-points-line {
+  font-weight: 300;
+  font-size: 2.3rem;
+}
+
+// picture -block
 
 .sprint-picture-block {
+  position: relative;
+
   width: 20%;
   height: 20%;
   margin: 0 auto;
-
-  border-bottom: solid 1px $sprint-border-color;
 }
+.sprint-picture {
+  position: absolute;
+
+  height: 40px;
+
+  filter: drop-shadow(3px 10px 3px $sprint-border-color);
+}
+.bat0 {
+  top: 31px;
+  left: -10px;
+}
+.bat1 {
+  top: 0;
+  left: 48px;
+}
+.bat2 {
+  top: -2px;
+  left: -28px;
+}
+.bat3 {
+  top: -2px;
+  left: 122px;
+}
+.bat1,
+.bat2,
+.bat3 {
+  display: none;
+}
+
+// words-display
 .sprint-display {
   display: flex;
   flex-direction: column;
@@ -111,14 +141,23 @@ $print-header-third: #e91e62a2;
   height: 30%;
   margin: 0 auto;
 
-  border-bottom: dotted 2px $sprint-border-color;
+  font-weight: 300;
+  font-size: 3rem;
+  color: $sprint-words-color;
+
+  border-bottom: dotted 5px $sprint-border-color;
+}
+.sprint-display--green {
+  border-color: $sprint-right-color;
+}
+.sprint-display--red {
+  border-color: $sprint-wrong-color;
 }
 .sprint-word {
-  margin-bottom: 1%;
-
-  font-weight: 300;
-  font-size: 24px;
+  margin-bottom: 3%;
 }
+
+// controlls
 .sprint-controlls {
   display: flex;
   justify-content: space-around;
@@ -153,41 +192,167 @@ $print-header-third: #e91e62a2;
 }
 
 // statistics
-
 .sprint-result-header {
   margin-top: 5%;
+
+  font-weight: 300;
+  font-size: 3.2rem;
+  line-height: 3.2rem;
+  color: $main-color;
+  text-transform: uppercase;
+  letter-spacing: 13px;
+}
+.sprint-final-score {
+  margin-bottom: 1rem;
+
+  font-weight: 300;
+  font-size: 2.5rem;
+  color: $main-color;
 }
 .sprint-statistics {
-  height: 60%;
+  align-self: stretch;
   margin: 0 5%;
+
+  font-weight: 300;
+  font-size: 2.5rem;
+  text-align: justify;
+  color: $main-color;
 }
-.sprint-user-errors{
-  border: 1px solid;
-  height: 67%;
+.sprint-user-mistakes {
+  margin-bottom: 1rem;
+
+  color: $sprint-wrong-color;
+}
+.sprint-mistaken-words {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  max-height: 160px;
+  padding: 1%;
+  overflow: hidden;
+
+  font-size: 1.3rem;
+  color: $sprint-border-color;
+
+  box-shadow: inset 0 0 1px 0 $main-color;
+
+  scrollbar-width: hidden;
+  scrollbar-width: thin;
 }
 
 .sprint-result-controlls {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   height: 25%;
   margin: 0 5%;
 }
 
-// sart
-
+// sart-page
 .sprint-start-header {
   margin-top: 5%;
 
-  font-size: 3rem;
+  font-weight: 300;
+  font-size: 3.2rem;
+  color: $main-color;
   text-transform: uppercase;
+  letter-spacing: 13px;
 }
-.sprint-game-descr {
+.sprint-game-descr,
+.sprint-user-advice {
   margin-bottom: 1%;
+
+  color: $main-color;
 }
 .sprint-start-controlls {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 25%;
+}
+
+// game-modifications
+.sprint-mode-1 {
+  .sprint-header {
+    background: center / contain url("/src/assets/images/roof.jpg");
+  }
+  .sprint-header-layer {
+    color: #ffffff;
+
+    background-color: $print-header-first;
+    box-shadow: 0 2px 5px 0 $sprint-border-color;
+  }
+  .bat0 {
+    display: none;
+  }
+  .bat1 {
+    display: block;
+  }
+}
+.sprint-mode-2 {
+  .sprint-header {
+    background: center / contain url("/src/assets/images/roof.jpg");
+  }
+  .sprint-header-layer {
+    color: #ffffff;
+
+    background-color: $print-header-second;
+    box-shadow: 0 2px 5px 0 $sprint-border-color;
+  }
+  .bat0 {
+    display: none;
+  }
+  .bat1,
+  .bat2 {
+    display: block;
+  }
+}
+.sprint-mode-3 {
+  .sprint-header {
+    background: center / contain url("/src/assets/images/roof.jpg");
+  }
+  .sprint-header-layer {
+    color: #ffffff;
+
+    background-color: $print-header-third;
+    box-shadow: 0 2px 5px 0 $sprint-border-color;
+  }
+  .bat0 {
+    display: none;
+  }
+  .bat1,
+  .bat2,
+  .bat3 {
+    display: block;
+  }
+}
+
+// closeBtn
+.closeBtn {
+  position: absolute;
+  top: 50px;
+  right: 10px;
+
+  width: 3.2rem;
+  height: 3.2rem;
+}
+.closeBtn:hover{
+cursor: pointer;
+}
+.closeBtn::after,
+.closeBtn::before {
+  content: "";
+  position: absolute;
+  left: 15px;
+
+  width: 2px;
+  height: 33px;
+
+  background-color: $main-color;
+}
+.closeBtn::before {
+  transform: rotate(45deg);
+}
+.closeBtn::after {
+  transform: rotate(-45deg);
 }
